--- a/app/scss/brands/maytag/_results.scss
+++ b/app/scss/brands/maytag/_results.scss
@@ -114,7 +114,7 @@
 					letter-spacing: 1px;
 				}
 				.btn-text::after {
-					content: '>';
+					content: url(../img/cta-arrow.png);
 					margin-left: 10px;
 					padding-bottom: 3px;
 				}
@@ -165,7 +165,7 @@
 					letter-spacing: 1px;
 				}
 				.btn-text::after {
-					content: '>';
+					content: url(../img/cta-arrow.png);
 					margin-left: 10px;
 					padding-bottom: 3px;
 				}
